# gemini-deep-research-mcp

./: .env.example  .gitignore  INSTALL.md  README.md  SECURITY.md  canonical_style.css  export.py  pyproject.toml  server.py  storage.py
.github/workflows/: ci.yml
deploy/: Caddyfile  cloudflared-named.service  cloudflared.config.example.yml  mcp-gemini-deep-research.service
scripts/: gemini-deep-research-mcp-stdio  install-client.sh  verify.sh
tests/: test_server.py
