[project]
name = "mcp-gemini-deep-research"
version = "0.1.0"
description = "MCP server exposing Google Gemini Deep Research as tools for Claude and other MCP clients."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Project contributors" },
]
dependencies = [
    "fastmcp>=3.2.4",
    "google-genai>=1.73.1",
    "markdown>=3.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "weasyprint>=68.1",
]

[project.scripts]
mcp-gemini-deep-research = "server:main"
