[project]
name = "mcp-gemini-deep-research"
version = "0.2.0"
description = "MCP server exposing Google Gemini Deep Research as tools for Claude and other MCP clients."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "gemini", "deep-research", "fastmcp", "llm"]
authors = [
    { name = "Project contributors" },
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=3.2.4",
    "google-genai>=1.73.1",
    "markdown>=3.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "weasyprint>=68.1",
]

[project.scripts]
mcp-gemini-deep-research = "server:main"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
